ISIS-2617: fixes disabled menu items too light on darkly theme

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -561,7 +561,8 @@ div.additionalLinkList {
 .dropdown-menu > .disabled > a, 
 .dropdown-menu > .disabled > a:hover, 
 .dropdown-menu > .disabled > a:focus {
-    color: #b4bcc2;
+    /*color: rgba(123, 138, 139, 0.5);*/
+    opacity: 0.5; 
     cursor: not-allowed;
 }
 
